[gd_scene load_steps=19 format=2]

[ext_resource path="res://src/shaders/Screen.tres" type="Shader" id=1]
[ext_resource path="res://src/shaders/burano.png" type="Texture" id=2]
[ext_resource path="res://src/shaders/ImpactShader.gdshader" type="Shader" id=3]
[ext_resource path="res://src/shaders/ScreenShader.gd" type="Script" id=4]
[ext_resource path="res://assets/fonts/ParkLaneNF.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/bg/filmgrain.png" type="Texture" id=6]
[ext_resource path="res://assets/bg/vignette.png" type="Texture" id=7]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 1 )
shader_param/saturation = 0.5
shader_param/color = 2

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 3 )
shader_param/center = Vector2( 0.5, 0.5 )
shader_param/force = 0.3
shader_param/size = 0.2
shader_param/thickness = 0.0

[sub_resource type="Animation" id=4]
resource_name = "Impact"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/force")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.1, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:material:shader_param/size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.25 ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/force")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:material:shader_param/size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.2 ]
}

[sub_resource type="Shader" id=6]
code = "shader_type canvas_item;

uniform vec2 center = vec2(0.5, 0.5);
uniform float size = 0.5;

void fragment(){
	float ratio = SCREEN_PIXEL_SIZE.x / SCREEN_PIXEL_SIZE.y;
	vec2 scaledUV = (SCREEN_UV - vec2(0.5,0.0)) / vec2(ratio, 1) + vec2(0.5,0.0);
	
	if (length(scaledUV - center) < size)
		COLOR = texture(SCREEN_TEXTURE, scaledUV);
	else
		COLOR = vec4(0, 0, 0, 1);
	
	//COLOR = vec4(scaledUV - center, 0, 1);
}"

[sub_resource type="ShaderMaterial" id=7]
shader = SubResource( 6 )
shader_param/center = Vector2( 0.5, 0.5 )
shader_param/size = 0.5

[sub_resource type="DynamicFont" id=8]
size = 128
font_data = ExtResource( 5 )

[sub_resource type="Shader" id=11]
code = "shader_type canvas_item;

uniform vec4 base: hint_color;
uniform sampler2D grain;
uniform float grain_strength = 0.3;
uniform sampler2D vignette;
uniform float fps = 12.0;
uniform float stretch = 0.5;
uniform float flashing = 0.01;

float make_grain(float time, vec2 uv) {
	vec2 ofs = vec2(sin(41.0 * time * sin(time * 123.0)), sin(27.0 * time * sin(time * 312.0)));
	return texture(grain, (uv + mod(ofs, vec2(1.0, 1.0))) * stretch).r;
}

void fragment() {
	vec3 c = textureLod(SCREEN_TEXTURE, SCREEN_UV, 0.0).rgb;

	//float v = max(c.r, max(c.g, c.b));
	float v = dot(c, vec3(0.33333, 0.33333, 0.33333));
	v = sqrt(v);
	//v *= v;

	float f = 1.0 / fps;
	float g = make_grain(TIME - mod(TIME, f), UV);
	g = max(g, make_grain(TIME - mod(TIME, f) + f, UV) * 0.5);
	g = max(g, make_grain(TIME - mod(TIME, f) + f * 2.0, UV) * 0.25);

	COLOR.rgb = base.rgb * v - vec3(g) * grain_strength;
	COLOR.rgb *= texture(vignette, UV).r;
	float ft = TIME * 0.002;
	COLOR.rgb += vec3(sin(75.0 * ft * sin(ft * 123.0))) * flashing;
}
"

[sub_resource type="ShaderMaterial" id=12]
shader = SubResource( 11 )
shader_param/base = Color( 0.501961, 0.486275, 0.486275, 1 )
shader_param/grain_strength = 0.3
shader_param/fps = 12.0
shader_param/stretch = 0.5
shader_param/flashing = 0.01
shader_param/grain = ExtResource( 6 )
shader_param/vignette = ExtResource( 7 )

[sub_resource type="Animation" id=9]
resource_name = "GameOver"
length = 1.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 0.25, 0.4, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BlackFront:anchor_left")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.2, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BlackFront:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Label:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("OldTimey:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:material:shader_param/percentage")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.6 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BlackFront:anchor_right")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BlackFront:anchor_left")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BlackFront:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Label:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("OldTimey:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[node name="ScreenShaders" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
margin_left = 18.0
margin_top = 2.0
margin_right = 818.0
margin_bottom = 602.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackBufferCop" type="BackBufferCopy" parent="."]
copy_mode = 2
rect = Rect2( 0, 0, 1000, 1000 )
__meta__ = {
"_edit_lock_": true
}

[node name="ScreenShader" type="ColorRect" parent="."]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="BackBufferCopy" type="BackBufferCopy" parent="."]
copy_mode = 2
rect = Rect2( 0, 0, 1000, 1000 )
__meta__ = {
"_edit_lock_": true
}

[node name="ImpactShader" type="ColorRect" parent="."]
visible = false
material = SubResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="ImpactShader"]
anims/Impact = SubResource( 4 )
anims/RESET = SubResource( 5 )

[node name="BackBufferCopy2" type="BackBufferCopy" parent="."]
copy_mode = 2
rect = Rect2( 0, 0, 1000, 1000 )
__meta__ = {
"_edit_lock_": true
}

[node name="GameOver" type="ColorRect" parent="."]
material = SubResource( 7 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="GameOver"]
margin_left = 89.0
margin_top = 230.0
margin_right = 917.0
margin_bottom = 374.0
custom_fonts/font = SubResource( 8 )
text = "OUT OF LUCK!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackBufferCopy" type="BackBufferCopy" parent="GameOver"]
copy_mode = 2
rect = Rect2( 0, 0, 1000, 1000 )
__meta__ = {
"_edit_lock_": true
}

[node name="OldTimey" type="ColorRect" parent="GameOver"]
material = SubResource( 12 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlackFront" type="ColorRect" parent="GameOver"]
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="GameOver"]
anims/GameOver = SubResource( 9 )
anims/RESET = SubResource( 10 )

[node name="Button" type="Button" parent="."]
margin_left = 11.0
margin_top = 68.0
margin_right = 23.0
margin_bottom = 88.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
